src/ScratchParser.java
// Generated from Scratch.g4 by ANTLR 4.7.1

	import java.util.Map;
	import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScratchParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, STRING=48, BOOLEAN=49, NUM=50, KEYDIGIT=51, KEYLETTER=52, 
		ID=53, WS=54, LINE_COMMENT=55, COMMENT=56, ERROR=57;
	public static final int
		RULE_main = 0, RULE_headerDef = 1, RULE_stat = 2, RULE_varDeclaration = 3, 
		RULE_idList = 4, RULE_dataType = 5, RULE_isKeyPressed = 6, RULE_key = 7, 
		RULE_random = 8, RULE_assignment = 9, RULE_functionInvocation = 10, RULE_classInstanciation = 11, 
		RULE_argsList = 12, RULE_argsListDef = 13, RULE_methodInvocation = 14, 
		RULE_functionDefinition = 15, RULE_returnStat = 16, RULE_conditional = 17, 
		RULE_elseIfStat = 18, RULE_loop = 19, RULE_statList = 20, RULE_expression = 21;
	public static final String[] ruleNames = {
		"main", "headerDef", "stat", "varDeclaration", "idList", "dataType", "isKeyPressed", 
		"key", "random", "assignment", "functionInvocation", "classInstanciation", 
		"argsList", "argsListDef", "methodInvocation", "functionDefinition", "returnStat", 
		"conditional", "elseIfStat", "loop", "statList", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'function'", "'('", "')'", "';'", "'='", "','", "'Sprite'", "'List'", 
		"'Window'", "'num'", "'str'", "'boolean'", "'void'", "'is'", "'pressed'", 
		"'?'", "'key->space'", "'key->left arrow'", "'key->right arrow'", "'key->up arrow'", 
		"'key->down arrow'", "'pickRandom'", "'->'", "'create'", "'.'", "'{'", 
		"'}'", "'give'", "'if'", "'else'", "'elsif'", "'while'", "'for'", "'^'", 
		"'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
		"'and'", "'or'", "'not'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"STRING", "BOOLEAN", "NUM", "KEYDIGIT", "KEYLETTER", "ID", "WS", "LINE_COMMENT", 
		"COMMENT", "ERROR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Scratch.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    static protected List<HashMap<String, Symbol>> contextSymbolTables   = new ArrayList<>();
	    static protected Map<String, Object[]> funcsToBeDef                  = new HashMap<>();

	public ScratchParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ScratchParser.EOF, 0); }
		public List<HeaderDefContext> headerDef() {
			return getRuleContexts(HeaderDefContext.class);
		}
		public HeaderDefContext headerDef(int i) {
			return getRuleContext(HeaderDefContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(44);
					headerDef();
					}
					} 
				}
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__23) | (1L << T__27) | (1L << T__28) | (1L << T__31) | (1L << T__32) | (1L << ID))) != 0)) {
				{
				{
				setState(50);
				stat();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderDefContext extends ParserRuleContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(ScratchParser.ID, 0); }
		public ArgsListDefContext argsListDef() {
			return getRuleContext(ArgsListDefContext.class,0);
		}
		public HeaderDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitHeaderDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderDefContext headerDef() throws RecognitionException {
		HeaderDefContext _localctx = new HeaderDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_headerDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			dataType();
			setState(60);
			match(ID);
			setState(61);
			match(T__1);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) {
				{
				setState(62);
				argsListDef();
				}
			}

			setState(65);
			match(T__2);
			setState(66);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoopDeclStatContext extends StatContext {
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public LoopDeclStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitLoopDeclStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditionalStatContext extends StatContext {
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public ConditionalStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitConditionalStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarDeclStatContext extends StatContext {
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public VarDeclStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitVarDeclStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncDefStatContext extends StatContext {
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public FuncDefStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitFuncDefStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ClassInstStatContext extends StatContext {
		public ClassInstanciationContext classInstanciation() {
			return getRuleContext(ClassInstanciationContext.class,0);
		}
		public ClassInstStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitClassInstStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RetStatContext extends StatContext {
		public ReturnStatContext returnStat() {
			return getRuleContext(ReturnStatContext.class,0);
		}
		public RetStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitRetStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignStatContext extends StatContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitAssignStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MethodInvStatContext extends StatContext {
		public MethodInvocationContext methodInvocation() {
			return getRuleContext(MethodInvocationContext.class,0);
		}
		public MethodInvStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitMethodInvStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncInvStatContext extends StatContext {
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public FuncInvStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitFuncInvStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new RetStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				returnStat();
				setState(69);
				match(T__3);
				}
				break;
			case 2:
				_localctx = new VarDeclStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				varDeclaration();
				setState(72);
				match(T__3);
				}
				break;
			case 3:
				_localctx = new AssignStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				assignment();
				setState(75);
				match(T__3);
				}
				break;
			case 4:
				_localctx = new FuncInvStatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				functionInvocation();
				setState(78);
				match(T__3);
				}
				break;
			case 5:
				_localctx = new ClassInstStatContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				classInstanciation();
				setState(81);
				match(T__3);
				}
				break;
			case 6:
				_localctx = new MethodInvStatContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				methodInvocation();
				setState(84);
				match(T__3);
				}
				break;
			case 7:
				_localctx = new FuncDefStatContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(86);
				functionDefinition();
				}
				break;
			case 8:
				_localctx = new ConditionalStatContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(87);
				conditional();
				}
				break;
			case 9:
				_localctx = new LoopDeclStatContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(88);
				loop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public Type type;
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
	 
		public VarDeclarationContext() { }
		public void copyFrom(VarDeclarationContext ctx) {
			super.copyFrom(ctx);
			this.type = ctx.type;
		}
	}
	public static class VarDeclOnlyContext extends VarDeclarationContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public VarDeclOnlyContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitVarDeclOnly(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarDeclAndAssignContext extends VarDeclarationContext {
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(ScratchParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclAndAssignContext(VarDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitVarDeclAndAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new VarDeclOnlyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				dataType();
				setState(92);
				idList();
				}
				break;
			case 2:
				_localctx = new VarDeclAndAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				dataType();
				setState(95);
				match(ID);
				setState(96);
				match(T__4);
				setState(97);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ScratchParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ScratchParser.ID, i);
		}
		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitIdList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_idList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ID);
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102);
					match(T__5);
					setState(103);
					match(ID);
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public Type type;
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dataType);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(T__6);
				((DataTypeContext)_localctx).type =  new SpriteType();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(T__7);
				((DataTypeContext)_localctx).type =  new ListType();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(T__8);
				((DataTypeContext)_localctx).type =  new WindowType();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				match(T__9);
				((DataTypeContext)_localctx).type =  new NumberType();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 5);
				{
				setState(117);
				match(T__10);
				((DataTypeContext)_localctx).type =  new StringType();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 6);
				{
				setState(119);
				match(T__11);
				((DataTypeContext)_localctx).type =  new BooleanType();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 7);
				{
				setState(121);
				match(T__12);
				((DataTypeContext)_localctx).type =  new VoidType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IsKeyPressedContext extends ParserRuleContext {
		public Type type;
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public IsKeyPressedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_isKeyPressed; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitIsKeyPressed(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IsKeyPressedContext isKeyPressed() throws RecognitionException {
		IsKeyPressedContext _localctx = new IsKeyPressedContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_isKeyPressed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__13);
			setState(126);
			key();
			setState(127);
			match(T__14);
			setState(128);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public String value;
		public Token KEYLETTER;
		public Token KEYDIGIT;
		public TerminalNode KEYLETTER() { return getToken(ScratchParser.KEYLETTER, 0); }
		public TerminalNode KEYDIGIT() { return getToken(ScratchParser.KEYDIGIT, 0); }
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitKey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_key);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYLETTER:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				((KeyContext)_localctx).KEYLETTER = match(KEYLETTER);
				((KeyContext)_localctx).value =  (((KeyContext)_localctx).KEYLETTER!=null?((KeyContext)_localctx).KEYLETTER.getText():null);
				}
				break;
			case KEYDIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				((KeyContext)_localctx).KEYDIGIT = match(KEYDIGIT);
				((KeyContext)_localctx).value =  (((KeyContext)_localctx).KEYDIGIT!=null?((KeyContext)_localctx).KEYDIGIT.getText():null);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(T__16);
				((KeyContext)_localctx).value =  "key->space";
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				match(T__17);
				((KeyContext)_localctx).value =  "key->left arrow";
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				match(T__18);
				((KeyContext)_localctx).value =  "key->right arrow";
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 6);
				{
				setState(140);
				match(T__19);
				((KeyContext)_localctx).value =  "key->up arrow";
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 7);
				{
				setState(142);
				match(T__20);
				((KeyContext)_localctx).value =  "key->down arrow";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RandomContext extends ParserRuleContext {
		public Type type;
		public ExpressionContext e1;
		public ExpressionContext e2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public RandomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_random; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScratchVisitor ) return ((ScratchVisitor<? extends T>)visitor).visitRandom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RandomContext random() throws RecognitionException {
		RandomContext _localctx = new RandomContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_random);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__21);
			setState(147);
			match(T__1);
			setState(148);
			((RandomContext)_localctx).e1 = expression(0);
			setState(149);
			match(T__22);
			setState(150);
			((RandomContext)_localctx).e2 = expression(0);
			setState(151);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
